...
    
    var body: some View {
        
        ZStack(alignment: .bottomLeading) {
            UITabView(selection: $selectedTab) {
                HomeView(selectedTab: $selectedTab)
                    .tabItem("Home", image: UIImage(named: "ic-home"))
                
                MyPromotionsView()
                    .tabItem("My Promotions", image: UIImage(named: "ic-rewards"))
                
                ProfileView()
                    .tabItem("My Profile", image: UIImage(named: "ic-profile"))
                
                /* Post MVP
                RedeemView()
                    .tabItem("Redeem", image: UIImage(named: "ic-book"))
                */
                
                MoreView()
                    .tabItem("More", image: UIImage(named: "ic-more"))
            }
            .onAppear {
                // correct the transparency bug for Tab bars
                let tabBarAppearance = UITabBarAppearance()
                tabBarAppearance.configureWithOpaqueBackground()
                UITabBar.appearance().scrollEdgeAppearance = tabBarAppearance
...
