...
					.padding(.horizontal, 16)
					.accessibilityIdentifier(AppAccessibilty.receipts.newButton)
					
				}
				.padding(.top, 12)
				ReceiptList(receipts: viewModel.searchText.isEmpty ? viewModel.receipts : viewModel.filteredReceipts)
					.loytaltyNavigationTitle("Receipts")
					.loyaltyNavBarSearchButtonHidden(true)
			}
			.withAppRouter()
			.withSheetDestination(sheetDestination: $routerpath.presentedSheet)
			.withFullScreenCover(fullSheetDestination: $routerpath.presentedFullSheet)
			.environmentObject(routerpath)
...
