...
    
    @Environment(\.dismiss) private var dismiss
    
    var body: some View {
        
        VStack {
            SheetHeader(title: "Terms and Conditions") {
                dismiss()
            }
            ScrollView {
                VStack {
                    
                    // swiftlint:disable line_length
...
